[gd_scene load_steps=7 format=3 uid="uid://h75kpqpphro7"]

[ext_resource type="Script" uid="uid://bd28yuw5ttosm" path="res://scenes/GUI/shared/descriptions/plant_description/gui_plant_description.gd" id="1_lgl7a"]
[ext_resource type="Texture2D" uid="uid://cnnxje814bs2" path="res://resources/sprites/GUI/icons/resources/icon_gold.png" id="2_4rpey"]
[ext_resource type="PackedScene" uid="uid://bfye3pwakcidx" path="res://scenes/GUI/shared/descriptions/gui_tooltip_description_separator.tscn" id="2_22r1h"]
[ext_resource type="Texture2D" uid="uid://dxyqfprxbenb6" path="res://resources/sprites/GUI/icons/resources/icon_light.png" id="3_22r1h"]
[ext_resource type="PackedScene" uid="uid://defua0wjy7nqc" path="res://scenes/GUI/shared/descriptions/gui_description_rich_text_label.tscn" id="3_lgl7a"]
[ext_resource type="Texture2D" uid="uid://ck8xmcukmvwwu" path="res://resources/sprites/GUI/icons/resources/icon_water.png" id="4_lgl7a"]

[node name="GUIPlantDescription" type="VBoxContainer"]
custom_minimum_size = Vector2(48, 0)
offset_right = 48.0
offset_bottom = 37.0
theme_override_constants/separation = 4
script = ExtResource("1_lgl7a")

[node name="NameLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 1
theme_type_variation = &"HUD_mid"
text = "Egg"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RequirementContainerHbox" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="Gold" type="HBoxContainer" parent="RequirementContainerHbox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 1

[node name="TextureRect" type="TextureRect" parent="RequirementContainerHbox/Gold"]
custom_minimum_size = Vector2(6, 6)
layout_mode = 2
texture = ExtResource("2_4rpey")
expand_mode = 1
stretch_mode = 5

[node name="GoldLabel" type="Label" parent="RequirementContainerHbox/Gold"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"HUD_small"

[node name="Light" type="HBoxContainer" parent="RequirementContainerHbox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 1

[node name="TextureRect" type="TextureRect" parent="RequirementContainerHbox/Light"]
custom_minimum_size = Vector2(6, 6)
layout_mode = 2
texture = ExtResource("3_22r1h")
expand_mode = 1
stretch_mode = 5

[node name="LightRequirementLabel" type="Label" parent="RequirementContainerHbox/Light"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"HUD_small"

[node name="Water" type="HBoxContainer" parent="RequirementContainerHbox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 1

[node name="TextureRect" type="TextureRect" parent="RequirementContainerHbox/Water"]
custom_minimum_size = Vector2(6, 6)
layout_mode = 2
texture = ExtResource("4_lgl7a")
expand_mode = 1
stretch_mode = 5

[node name="WaterRequirementLabel" type="Label" parent="RequirementContainerHbox/Water"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"HUD_small"

[node name="GUITooltipDescriptionSaparator" parent="." instance=ExtResource("2_22r1h")]
unique_name_in_owner = true
self_modulate = Color(0.223529, 0.121569, 0.129412, 1)
layout_mode = 2

[node name="GUIDescriptionRichTextLabel" parent="." instance=ExtResource("3_lgl7a")]
unique_name_in_owner = true
layout_mode = 2
